# crud-rs

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: helper.rs  lib.rs
macros/src/authorizer/: mod.rs
macros/src/crud/: filter.rs  from.rs  helper.rs  mod.rs  sort.rs
macros/src/crud/resolver/: authorizer.rs  hook.rs  mod.rs  mutation.rs  query.rs  subscription.rs
macros/src/hook/: mod.rs
macros/src/relation/: connection.rs  mod.rs  relation.rs
src/: authorize.rs  hook.rs  lib.rs  pagination.rs  prelude.rs
tests/: derive.rs  many_to_one.rs  one_to_many.rs  simple_crud.rs
tests/entity/: author.rs  post.rs
tests/fixture/: db.rs  mod.rs  request.rs  schema.rs
tests/fixture/entity/: author.rs  post.rs
tests/fixture/migration/: m20220722_000001_create_table_author.rs  m20220722_000002_create_table_post.rs  tables.rs
tests/fixture/resolver/: author.rs  mod.rs  post.rs
tests/migration/: m20220722_000001_create_table_author.rs  m20220722_000002_create_table_post.rs  mod.rs
